# event-taxonomy-tracker

./: .gitignore  LICENSE  README.md  api.py  coding-plan.md  database.py  package-lock.json  package.json  pyproject.toml  run.sh  stop.sh
backend/: __init__.py  api.py  database.py  main.py  models.py  seed_data.py  utils.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_database.py  test_models.py  test_utils.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
frontend/src/: App.jsx  App.tsx  index.css
frontend/src/components/: BulkImport.jsx  BulkImport.tsx  Changelog.jsx  Changelog.tsx  EmptyState.tsx  EventList.jsx  EventList.tsx  EventModal.jsx  EventModal.test.tsx  EventModal.tsx  FilterBar.tsx  Header.test.tsx  Header.tsx  PropertyRegistry.jsx  PropertyRegistry.tsx  Skeleton.tsx  Toast.test.tsx  Toast.tsx
frontend/src/components/ui/: button.jsx  dialog.jsx
frontend/src/hooks/: useDarkMode.js  useDarkMode.test.ts  useDarkMode.ts  useToast.test.ts  useToast.ts
frontend/src/test/mocks/: handlers.ts
frontend/src/types/: api.ts
