[project]
name = "event-taxonomy-tool"
version = "0.1.0"
description = "Event taxonomy management tool with property registry and conflict detection"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.23",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
only-include = ["backend/api.py", "backend/database.py", "backend/models.py", "backend/utils.py"]
